# hercules-ci-agent

./: .envrc  .gitignore  .gitmodules  .hie-bios  .hie-bios-helper  .hlint.yaml  .pre-commit-config.yaml  README.md  RELEASE.md  brittany.yaml  cabal.project  custom-snapshot.yaml  darwin-module.nix  default.nix  flake.nix  hie.yaml  live-tests  module.nix  nixops-profile.nix  profile.nix  repl.nix  shell.nix  stack.yaml  to-toml.test.run.nix  upstream-only-module.nix  variants.nix
cabal-pkg-config-version-hook/: CHANGELOG.md  README.md  cabal-pkg-config-version-hook.cabal
cabal-pkg-config-version-hook/src/Distribution/: PkgConfigVersionHook.hs
dev/: hie-bios-fml.diff  (+2 more)
hercules-ci-agent/: CHANGELOG.md  hercules-ci-agent.cabal  pkg.nix
hercules-ci-agent/cbits/: aliases.h  hercules-aliases.h  hercules-error.cxx  hercules-error.hh  hercules-logger.cc  hercules-logger.cxx  hercules-logger.hh  hercules-store.cc  hercules-store.cxx  hercules-store.hh
hercules-ci-agent/cbits/nix-2.3/: hercules-store.cxx  hercules-store.hh
hercules-ci-agent/cbits/nix-2.4/: hercules-store.cxx  hercules-store.hh
hercules-ci-agent/cbits/nix-2.5/: hercules-store.cxx  hercules-store.hh
hercules-ci-agent/data/: default-herculesCI-for-flake.nix
hercules-ci-agent/hercules-agent/: Main.hs
hercules-ci-agent/hercules-agent-worker/CNix/Internal/: Store.hs
hercules-ci-agent/hercules-agent/Hercules/: Agent.hs
hercules-ci-agent/hercules-agent/Hercules/Agent/: Batch.hs  Client.hs  Evaluate.hs  Log.hs  NixPath.hs  Options.hs  Scribe.hs
hercules-ci-agent/hercules-ci-agent/: Main.hs  WorkerProcess.hs
hercules-ci-agent/hercules-ci-agent-worker/: CNix.hs  Main.hs
hercules-ci-agent/hercules-ci-agent-worker/CNix/Internal/: Context.hs  Raw.hs  Store.hs  Typed.hs
hercules-ci-agent/hercules-ci-agent-worker/Hercules/Agent/: Worker.hs
hercules-ci-agent/hercules-ci-agent/Data/Functor/: Partitioner.hs
hercules-ci-agent/hercules-ci-agent/Hercules/: Agent.hs
hercules-ci-agent/hercules-ci-agent/Hercules/Agent/: AgentSocket.hs  Bag.hs  Batch.hs  BinaryCaches.hs  Build.hs  CabalInfo.hs  Cache.hs  Cachix.hs  Client.hs  Compat.hs  Config.hs  Effect.hs  Env.hs  EnvironmentInfo.hs  Evaluate.hs  Exception.hs  Files.hs  Init.hs  InitWorkerConfig.hs  Json.hs  Log.hs  LogSocket.hs  Memo.hs  Netrc.hs  Nix.hs  NixPath.hs  Options.hs  ResourceLimiter.hs  STM.hs  Scribe.hs  SecureDirectory.hs  ServiceInfo.hs  Socket.hs  Token.hs  WorkerProcess.hs
hercules-ci-agent/hercules-ci-nix-daemon/: daemon.cc  daemon.cxx  main.cc
hercules-ci-agent/src-cnix/: CNix.hs
hercules-ci-agent/src-cnix/CNix/: Eval.hs
hercules-ci-agent/src-cnix/CNix/Eval/: Context.hs  Raw.hs  Typed.hs
hercules-ci-agent/src-cnix/CNix/Internal/: Context.hs  HerculesStore.hs  Raw.hs  Store.hs  Typed.hs
hercules-ci-agent/src-internal-ffi/Hercules/Agent/: StoreFFI.hs
hercules-ci-agent/src/Data/Conduit/: Extras.hs
hercules-ci-agent/src/Data/Fixed/: Extras.hs
hercules-ci-agent/src/Data/Time/: Extras.hs
hercules-ci-agent/src/Hercules/: Effect.hs  Secrets.hs  UserException.hs
hercules-ci-agent/src/Hercules/Agent/: Binary.hs  Conduit.hs  NixFile.hs  NixPath.hs  Producer.hs  STM.hs  Sensitive.hs  Socket.hs  Store.hs  WorkerProcess.hs
hercules-ci-agent/src/Hercules/Effect/: Container.hs
hercules-ci-agent/test/: Spec.hs  TestMain.hs
hercules-ci-agent/test/Hercules/: SecretsSpec.hs
hercules-ci-agent/test/Hercules/Agent/: ConduitSpec.hs  ConfigSpec.hs  NixPathSpec.hs  WorkerProcessSpec.hs
hercules-ci-agent/testdata/: vm-test-run-agent-test.drv
hercules-ci-api/: CHANGELOG.md  hercules-ci-api.cabal  live-tests  pkg.nix  swagger.nix
hercules-ci-api-agent/: CHANGELOG.md  hercules-ci-api-agent.cabal  pkg.nix
hercules-ci-api-agent/src/Hercules/API/: Agent.hs  Logs.hs  Task.hs  TaskStatus.hs
hercules-ci-api-agent/src/Hercules/Formats/: CachixCache.hs  Common.hs  Mountable.hs  NixCache.hs  Secret.hs
hercules-ci-api-agent/test/: AesonSupport.hs  Spec.hs
hercules-ci-api-agent/test/Hercules/Formats/: CachixCacheSpec.hs  MountableSpec.hs  SecretSpec.hs
hercules-ci-api-core/: CHANGELOG.md  hercules-ci-api-core.cabal  pkg.nix
hercules-ci-api-core/src/Hercules/: Error.hs
hercules-ci-api-core/src/Hercules/API/: DayOfWeek.hs  Id.hs  Name.hs  Prelude.hs  Sensitive.hs  Servant.hs
hercules-ci-api/hercules-gen-swagger/: Main.hs
hercules-ci-api/src/Hercules/: API.hs  Frontend.hs
hercules-ci-api/src/Hercules/API/: Accounts.hs  Agents.hs  Attribute.hs  Auth.hs  BillingStatus.hs  Build.hs  ClientInfo.hs  Derivation.hs  Effects.hs  Error.hs  EvaluateEvent.hs  Forge.hs  GitLab.hs  Health.hs  Id.hs  Labels.hs  Logs.hs  Message.hs  Name.hs  Organizations.hs  Orphans.hs  Paging.hs  Prelude.hs  Projects.hs  Repos.hs  Result.hs  Servant.hs  ShowRead.hs  SimpleAttribute.hs  State.hs  Task.hs  TaskEvent.hs  TaskState.hs  TaskStatus.hs
hercules-ci-api/src/Hercules/Formats/: CacheKeys.hs  CachixCache.hs  Common.hs
hercules-ci-api/test/: AesonSupport.hs  Main.hs  Spec.hs
hercules-ci-api/test/Hercules/API/: AttributeSpec.hs
hercules-ci-api/test/Hercules/Formats/: CacheKeysSpec.hs  CachixCacheSpec.hs
hercules-ci-cli/: CHANGELOG.md  hercules-ci-cli.cabal  live-test  shell.nix
hercules-ci-cli/hci/: Main.hs
hercules-ci-cli/test/: Spec.hs
hercules-ci-cnix-expr/: CHANGELOG.md  Setup.hs  hercules-ci-cnix-expr.cabal
hercules-ci-cnix-expr/include/hercules-ci-cnix/: expr.hxx
hercules-ci-cnix-expr/test/: SingleState.hs  TestMain.hs
hercules-ci-cnix-expr/test/data/: sample.json
hercules-ci-cnix-store/: CHANGELOG.md  Setup.hs  hercules-ci-cnix-store.cabal
hercules-ci-cnix-store/cbits/: signals.cxx  signals.hxx  string.cxx
hercules-ci-cnix-store/compat-2.3/: derivation-output.cxx  path.cxx
hercules-ci-cnix-store/compat-2.3/include/: nix-compat.hh
hercules-ci-cnix-store/compat-2.4/include/: nix-compat.hh
hercules-ci-cnix-store/include/hercules-ci-cnix/: store.hxx  string.hxx
hercules-ci-cnix-store/src/Hercules/: CNix.hs
hercules-ci-cnix-store/test/: TestMain.hs
hercules-ci-cnix-store/test/data/: fixed-output.drv  regular.drv
(+455 files in other folders)
